--- a/README
+++ b/README
@@ -14,19 +14,24 @@ Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 
 =========
 
-This package contains schematics and driver for a CAN Bus interface for
-the Raspberry Pi Computer (http://www.raspberrypi.org).
-The driver is based on the PEAK-Systems Linux driver 7.6 published under
-the GNU General Public License.
-
-AsynPortDrivers for the EPICS control system framework are also included.
-Currently these AsynPortDrivers support
-- the CAN interface (as lower-level driver used by all other drivers)
-- ISEG EHS/EDS high voltage modules
-- Wiener VME crate remote control
+This package is used by the PANDA collaboration for EPICS device support
+for all devices which are controlled via CAN bus interfaces.
+This device support is realised using AsynPortDrivers:
+- CAN interface (as lower-level driver used by all other drivers)
+- ISEG EHS/EDS high voltage modules (http://www.iseg-hv.com/en/products/product-details/product/21/)
+- Wiener VME crate remote control (via CAN, http://www.wiener-d.com/products/24/19.html)
 - Temperature and Humidity Monitoring board for PANDA (THMP)
 - PANDA-EMC light pulser
-- TMCM142 1-axis stepper controller/driver (via CAN)
+- TMCM142 1-axis stepper controller/driver (via CAN, http://www.mocontronic.de/de/katalog/motorsteuerungen/TMCM-142-IF)
+
+As CAN interfaces currently interfaces from PEAK System (http://www.peak-system.com)
+and an adaptor board for the Raspberry Pi Computer developed by the PANDA collaboration
+are supported. The drvAsynCan device support module will need the peak system driver (or
+for linux-arm the included CAN driver for the adaptor board) to compile.
+See drvAsynCan.html for details on the AsynPortDrivers.
+
+Refer to LICENSE for details on the software license agreement
+of EPICS
 
 To use the AsynPortDrivers you will need
 - EPICS base 3.14.12.2 or later (http://www.aps.anl.gov/epics/)
