--- a/CAN_interface/driver/README
+++ b/CAN_interface/driver/README
@@ -1,19 +1,3 @@
-This program is free software; you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation; either version 3 of the License, or
-(at your option) any later version.
-
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with this program; if not, write to the Free Software
-Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
-
-=========
-
 This is the kernel module of the CAN bus interface
 for the Raspberry Pi Computer developed by the PANDA
 Collaboration.
@@ -21,6 +5,5 @@ Collaboration.
 The kernel module is heavily based on the kernel module
 from Peak Systems, also published under the GNU General Public License.
 
-The kernel module is for revision 2 of the Raspberry Pi Computer.
-If you are using revision 1, you have to change the used GPIOs and
-corresponding masks in can_gpio.c ( GPIO27 was GPIO21 on rev1)
+This version is for the Revision 2 of the Raspberry Pi.
+For revisions 1 see ../driver_rev1
