--- a/README
+++ b/README
@@ -1,38 +1,40 @@
-This program is free software; you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation; either version 3 of the License, or
-(at your option) any later version.
-
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with this program; if not, write to the Free Software
-Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
-
-=========
-
-This package is used by the PANDA collaboration for EPICS device support
-for all devices which are controlled via CAN bus interfaces.
-This device support is realised using AsynPortDrivers:
-- CAN interface (as lower-level driver used by all other drivers)
-- ISEG EHS/EDS high voltage modules (http://www.iseg-hv.com/en/products/product-details/product/21/)
-- Wiener VME crate remote control (via CAN, http://www.wiener-d.com/products/24/19.html)
-- Temperature and Humidity Monitoring board for PANDA (THMP)
-- PANDA-EMC light pulser
-- TMCM142 1-axis stepper controller/driver (via CAN, http://www.mocontronic.de/de/katalog/motorsteuerungen/TMCM-142-IF)
+This package is used by the PANDA collaboration for EPICS device support.
+The following devices controlled via CAN bus interfaces are supported:
+ - CAN interface (as lower-level driver used by all other drivers)
+ - ISEG EHS/EDS high voltage modules (http://www.iseg-hv.com/en/products/product-details/product/21/)
+ - Wiener VME crate remote control (via CAN, http://www.wiener-d.com/products/24/19.html)
+ - Temperature and Humidity Monitoring board for PANDA (THMP)
+ - PANDA-EMC light pulser
+ - TMCM142 1-axis stepper controller/driver (via CAN, http://www.mocontronic.de/de/katalog/motorsteuerungen/TMCM-142-IF)
 
 As CAN interfaces currently interfaces from PEAK System (http://www.peak-system.com)
 and an adaptor board for the Raspberry Pi Computer developed by the PANDA collaboration
-are supported. The drvAsynCan device support module will need the peak system driver (or
-for linux-arm the included CAN driver for the adaptor board) to compile.
-See drvAsynCan.html for details on the AsynPortDrivers.
+are supported.
 
-Refer to LICENSE for details on the software license agreement
-of EPICS
+Dependencies
+============
 
-To use the AsynPortDrivers you will need
-- EPICS base 3.14.12.2 or later (http://www.aps.anl.gov/epics/)
-- AsynDriver 4-21 or later (http://www.aps.anl.gov/epics/modules/soft/asyn/)
+ CAN_interface:
+  - For the kernel module to compile you need the kernel sources and headers
+
+ drvAsynCan
+  - EPICS base 3.14.12.2 or later (http://www.aps.anl.gov/epics/)
+  - AsynDriver 4-21 or later (http://www.aps.anl.gov/epics/modules/soft/asyn/)
+  - PEAK Systems CAN Driver or CAN driver for Raspberry Pi Adaptor Board
+
+Install
+=======
+
+ CAN_interface:
+  1. simple run 'make' follwed by 'make install' to install the driver and library
+
+ drvAsynCan:
+  1. Edit configure/RELEASE and change the paths to ASYN and EPICS_BASE
+
+  2. Type `make' to compile the package.
+
+Usage
+=====
+
+Refer to drvAsynCan/documentation/drvAsynCan.html for more information
+on how to use the asynPortDrivers
