--- a/README
+++ b/README
@@ -18,9 +18,12 @@ Dependencies
   - For the kernel module to compile you need the kernel sources and headers
 
  drvAsynCan
-  - EPICS base 3.14.12.2 or later (http://www.aps.anl.gov/epics/)
+  - EPICS base 3.14.12.3 or later (http://www.aps.anl.gov/epics/)
   - AsynDriver 4-21 or later (http://www.aps.anl.gov/epics/modules/soft/asyn/)
   - PEAK Systems CAN Driver or CAN driver for Raspberry Pi Adaptor Board
+
+ dallas1wire
+  - EPICS base 3.14.12.3 or later (http://www.aps.anl.gov/epics/)
 
 Install
 =======
@@ -30,7 +33,10 @@ Install
 
  drvAsynCan:
   1. Edit configure/RELEASE and change the paths to ASYN and EPICS_BASE
+  2. Type `make' to compile the package.
 
+ dallas1wire:
+  1. Edit configure/RELEASE and change the paths to EPICS_BASE
   2. Type `make' to compile the package.
 
 Usage
